objects/vlocity_ins__PartyRelationship__c.object
<CustomObject>
    <description>Party Relationships define relationships between parties such as households, contacts, partners, or accounts so that they can be visualized in the relationship graph.  Party relationships are typed and can have a start and end date specified.</description>
    <fields>
        <fullName>vlocity_ins__Color__c</fullName>
        <formula>vlocity_ins__RelationshipTypeId__r.vlocity_ins__Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryRole__c</fullName>
        <label>Primary Role</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipEndDate__c</fullName>
        <label>Relationship End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipStartDate__c</fullName>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>vlocity_ins__PartyRelationshipType__c</referenceTo>
        <relationshipLabel>Party Relationships</relationshipLabel>
        <relationshipName>Party_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourcePartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Party Id</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Party Relationships</relationshipLabel>
        <relationshipName>Party_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Party Id</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Party Relationships (Target Party Id)</relationshipLabel>
        <relationshipName>Party_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetRole__c</fullName>
        <label>Target Role</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Party Relationship</label>
    <nameField>
        <label>Relationships Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Party Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>